test/expected/typedef_eti.out
typedef extern int SI
        ^
9: error: "typedef extern int" is illegal for built-in type
